<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="16dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1" />


        <EditText
            android:id="@+id/registerUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/registerUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/registerUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789+"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <TextView
            android:id="@+id/registerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/adressMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/registerCarOwnner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_owner_text" />

        <LinearLayout
            android:id="@+id/registerSeatsSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerCarSeatsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_seats_label" />

            <Spinner
                android:id="@+id/registerCarSeats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="20dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/registerCarPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_registration_number"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_btn"
            android:textAllCaps="false"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>